# fast-api-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .dockerignore  .env-sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  makefile  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
{{cookiecutter.project_name}}/docs/: README.md
{{cookiecutter.project_name}}/src/{{cookiecutter.project_main_python_module}}/: __init__.py  __main__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_main_python_module}}/config/: README.md  app_config_base.py  logging.conf
{{cookiecutter.project_name}}/src/{{cookiecutter.project_main_python_module}}/routers/: core_endpoints.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_main_python_module}}/routers/models/: log_level_model.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_main_python_module}}/utilities/: README.md  instrumentation.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_main_python_module}}/utilities/exceptions/: handlers.py
{{cookiecutter.project_name}}/tests/: test_framework_core.py
